# CUDARaytracing

./: .gitignore  CMakeLists.txt  README.md  devicemath.cuh  hlw.cu  main.cu
lib/: lodepng.cu  tinyxml2.cu  viewport.cu  viewport.cuh  xmlload.cu  xmlload.cuh
lib/OpenImageDenoise/lib/cmake/OpenImageDenoise-2.3.3/: OpenImageDenoiseConfig.cmake  OpenImageDenoiseTargets-release.cmake  OpenImageDenoiseTargets.cmake
math/: color.cu  color.cuh  float3.cuh  matrix.cuh  vector.cu  vector.cuh
renderer/: bvh.cu  bvh.cuh  renderer.cu  renderer.cuh  rng.cuh  sampler.cuh  sequence.h  settings.cuh  shading.cu  trace.cu  trace.cuh
scene/: lights.cu  lights.cuh  mesh.cu  mesh.cuh  objects.cu  objects.cuh  rays.cuh  scene.cuh  structs.cu  structs.cuh  texture.cu  texture.cuh
scenes/final/: frame0001.xml  frame0002.xml  frame0003.xml  frame0004.xml  frame0005.xml  frame0006.xml  frame0007.xml  frame0008.xml  frame0009.xml  frame0010.xml  frame0011.xml  frame0012.xml  frame0013.xml  frame0014.xml  frame0015.xml  frame0016.xml  frame0017.xml  frame0018.xml  frame0019.xml  frame0020.xml  frame0021.xml  frame0022.xml  frame0023.xml  frame0024.xml  frame0025.xml  frame0026.xml  frame0027.xml  frame0028.xml  frame0029.xml  frame0030.xml  frame0031.xml  frame0032.xml  frame0033.xml  frame0034.xml  frame0035.xml  frame0036.xml  frame0037.xml  frame0038.xml  frame0039.xml  frame0040.xml  (+56 more)
scenes/proj1/: ball.xml  snowman.xml
scenes/proj13/: box.xml
scenes/proj2/: disk.xml
scenes/proj3/: ball.xml  box.xml  cmyk.xml
scenes/proj4/: box.xml  cmyk.xml
scenes/proj5/: ballbox.xml  box.xml  glasspot.xml  plane.xml
scenes/proj7/: checkerboard.xml
scenes/testseq/: f00.xml  f01.xml  f02.xml  f03.xml  f04.xml  f05.xml  f06.xml  f07.xml  f08.xml  f09.xml  f10.xml  f11.xml
